fixed overlapping of sidebar in about.html

--- a/assets/styles/about-styles.css
+++ b/assets/styles/about-styles.css
@@ -3,7 +3,7 @@
     width: 100%;
     text-align: center;
     top: -50px;
-    z-index: 2;
+    z-index: 1;
 }
 
 .social-div{
